# django-simple-email

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  template.config.json
.github/workflows/: ci.yml
demo_project/kernel/: settings.py  urls.py
demo_project/kernel/tests/: test_loadpage.py
django_my_lib/: views.py
django_my_lib/templates/django_my_lib/: home.html
django_simple_email/: __init__.py  admin.py  apps.py  models.py  rendering.py  sending.py  urls.py  validation.py  views.py  widgets.py
django_simple_email/fixtures/: sample_data.json  seasonal_data.json
django_simple_email/migrations/: 0001_initial.py  0002_rename_subject_emailtemplate_subject_default.py
django_simple_email/templates/django_simple_email/: home.html
django_simple_email/tests/: test_admin.py  test_rendering.py  test_sending.py  test_validation.py
docker/: compose.yml
